@@ -8,12 +8,13 @@
 
  - Updated translations (lt).
  - Fixed crash on tinted transparency (xc203-fixtint.diff).
+ - Fixed incorrect dcc cps calculation (xc203-fix-cps.diff).
  - Allow fullpath and relative filenames for Text Events sound files
    (Anthony Dragunov).
  - Added /GUI command (mainly for use by scripts).
  - Added -n, --no-plugins command-line arg.
  - Added a feature to change the color of away users.
- - Fixed incorrect dcc cps calculation.
+ - Moved default dcc and sound dirs inside ~/.xchat2/ (SilvereX).
  - 
  - 
 
